# TransferFile

./: README.md  transfers.sln
client/: CMakeLists.txt  transferc.cpp
lib/: libzmq.lib
server/: CMakeLists.txt  transfers.cpp
transferc/: transferc.cpp  transferc.vcxproj  transferc.vcxproj.filters
transfers/: transfers.cpp  transfers.vcxproj  transfers.vcxproj.filters
