cmake_minimum_required(VERSION 3.1)
project(TransferFileClient)
aux_source_directory(. DIR_SRCS)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ldl")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include)
#指定该dll的lib所在路径
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../lib)
add_executable(TransferFileClient ${DIR_SRCS})
#add_library(TransferFileClient SHARED  ${DIR_SRCS} )
target_link_libraries(TransferFileClient  -lzmq)
